--- a/jsconfig.json
+++ b/jsconfig.json
@@ -2,5 +2,14 @@
     "compilerOptions": {
         "baseUrl" : "./pages"
     },
-    "include": ["pages"]
+    
+
+"include": [
+    "pages/**/*.js",
+    "redux/**/*.ts"
+  ],
+  "exclude": [
+    "node_modules",
+    "**/*.spec.ts"
+  ]
 }
