--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "yup": "^0.32.11"
   },
   "devDependencies": {
+    "@types/node": "^17.0.24",
     "@types/react": "^17.0.43",
     "eslint": "8.2.0",
     "eslint-config-airbnb": "19.0.4",
@@ -45,6 +46,7 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "7.28.0",
     "eslint-plugin-react-hooks": "4.3.0",
-    "prettier": "^2.6.2"
+    "prettier": "^2.6.2",
+    "typescript": "^4.6.3"
   }
 }
